docs/.vuepress/styles/index.scss
:root {
  --content-width: 940px;
}

.custom-container.note {
  border-color: var(--nprogress-color);
  background-color: var(--c-tip-bg);
  color: var(--c-tip-text);
  padding: 0.1rem 1.5rem;
  border-left-width: 0.5rem;
  border-left-style: solid;
  margin: 1rem 0;
}

.custom-container-title {
  color: var(--c-tip-title);
}

.site-name {
  display: none;
}

